# monitor-app

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: cpu.h  graphic_ui.h  header.h  memory.h  prepare.h  process.h
include/models/: mem_info.h  net_info.h  sys_info.h  task_info.h  therm_info.h
src/: main.cpp
src/gui/: all_gui.cpp  mem_sec.cpp  navigation.cpp  net_sec.cpp  section.cpp  sys_sec.cpp  task_sec.cpp  therm_sec.cpp
src/models/: cpu.cpp  memory.cpp  osSetup.cpp  process.cpp
